v22 - Fixed Scrollbars, Set online Status for Contacts

--- a/src/Content/Home/LeftSideNav/LeftNavSide.scss
+++ b/src/Content/Home/LeftSideNav/LeftNavSide.scss
@@ -5,10 +5,14 @@
     margin-top: 1em;
     margin-left: 0.5em;
     height: 99.9%;
-    overflow-y: scroll;
-
     scrollbar-width: thin;
+    
+    
 
 
     position: fixed;
+}
+
+.opened {
+    overflow-y: scroll;
 }
